# CudaAndCompute

./: .gitignore  CMakeLists.txt  README.md
Cuda_Basics_1/: cuda_basics_1.cu
Hello_Cuda/: hello_cuda.cu
